# tuwe

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yml  cmake-single-platform.yml  cmake.yml
cmake/toolchains/: clang.cmake
cmake/triplets/: arm64-linux.cmake  arm64-mingw.cmake  arm64-windows.cmake  common.cmake  x64-linux.cmake  x64-mingw.cmake  x86-mingw.cmake
include/tuwe/client/: client.hpp  components.hpp  models.hpp  views.hpp  weather.hpp
src/: CMakeLists.txt  main.cpp
src/tuwe/client/: client.cpp  components.cpp  models.cpp  views.cpp  weather.cpp
tests/: CMakeLists.txt  test.cpp
